@@ -838,6 +838,7 @@ ei_alien=Alien related
 ei_induction-matrix-tile=Induction matrix floor
 
 [exotic-industries]
+gate-not-enough-energy=[img=utility/warning_icon]Gate on surface [color=yellow]__1__[/color] at [gps=__2__,__3__] does not have enough energy to open.
 gate-exit-container-set=Gate exit set to [color=yellow]__1__[/color] at [gps=__2__,__3__]. Connected with [entity=__4__]container.
 gate-exit-set=Gate exit set to [color=yellow]__1__[/color] at [gps=__2__,__3__].
 building-degraded=[img=utility/warning_icon] [entity=__1__]Building degraded over time at [gps=__2__,__3__].
