@@ -7,6 +7,7 @@ Date: 14.01.2024
     - alien seed and resin cycles are faster
   Bugfixes:
     - included fix for missing dummy in drone script
+    - fixed a bug then the gate would tp cloned items when in low power state and operated manualy
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.4
 Date: 08.01.2024
